<resources>
    <string name="app_name">FamilyRoots</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Welcome to Family Roots </string>
    <string name="copyright_text">All rights are reserved &#169; Family Roots, Inc 2020</string>
    <string name="logo_image_label">Logo</string>
    <string name="login_label">Log In</string>
    <string name="login_hint">Phone number or email address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgotten password?</string>
    <string name="create_account">Create New Family Root Account</string>
    <string name="first_name_hint">First Name</string>
    <string name="sur_name_hint">Surname</string>
    <string name="dob_hint">DOB</string>
    <string name="gender_hint">Gender</string>
    <string name="mobilenumber_hint">Mobile Number</string>
    <string name="email_hint">Email</string>
    <string name="choose_password_hint">Choose password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="terms_text">By tapping Sign Up, you agree to Family Roots <a href="https://google.com">Terms \n and
        conditions
    </a> and
        <a href="https://google.com">Privacy policy</a></string>
      <string name="find_your_account_btn_text">Find Your Account</string>
    <string name="phonenumber_hint">Phone number</string>
    <string name="confirm_account_hint">We will send you a code that you can use to log in</string>
    <string name="confirm_via_sms_hint">Confirm via SMS</string>
    <string name="confirm_via_email_hint">Confirm via Email</string>
    <string name="continue_btn_text">Continue</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="create_account_title">Create account</string>
</resources>
