<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
        >

            <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/create_account_margin"
                    android:singleLine="true"
                    android:hint="@string/first_name_hint"
                    android:layout_marginLeft="@dimen/create_account_margin"
                    android:layout_marginRight="@dimen/create_account_margin"
                    android:inputType="text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/surname"
                    tools:ignore="Autofill"
            />

            <EditText android:id="@+id/surname"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/create_account_margin"
                      android:layout_marginRight="@dimen/create_account_margin"
                      android:layout_marginTop="@dimen/create_account_margin"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/firstname"
                      android:singleLine="true"
                      android:inputType="text"
                      android:hint="@string/sur_name_hint"
                      tools:ignore="Autofill"
                      app:layout_constraintBottom_toTopOf="@+id/dob"
                      app:layout_constraintRight_toRightOf="parent"
            />


            <EditText android:id="@+id/dob"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/create_account_margin"
                      android:layout_marginRight="@dimen/create_account_margin"
                      android:layout_marginTop="@dimen/create_account_margin"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/surname"
                      android:singleLine="true"
                      android:inputType="text"
                      android:hint="@string/dob_hint"
                      tools:ignore="Autofill"
                      app:layout_constraintRight_toRightOf="parent"
            />

            <EditText android:id="@+id/gender"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/create_account_margin"
                      android:layout_marginRight="@dimen/create_account_margin"
                      android:layout_marginTop="@dimen/create_account_margin"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/dob"
                      android:singleLine="true"
                      android:inputType="text"
                      android:hint="@string/gender_hint"
                      tools:ignore="Autofill"
                      app:layout_constraintRight_toRightOf="parent"
            />

            <EditText android:id="@+id/mobilenumber"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/create_account_margin"
                      android:layout_marginRight="@dimen/create_account_margin"
                      android:layout_marginTop="@dimen/create_account_margin"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/gender"
                      android:singleLine="true"
                      android:inputType="number"
                      android:hint="@string/mobilenumber_hint"
                      tools:ignore="Autofill"
                      app:layout_constraintRight_toRightOf="parent"
            />

            <EditText android:id="@+id/email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/create_account_margin"
                      android:layout_marginRight="@dimen/create_account_margin"
                      android:layout_marginTop="@dimen/create_account_margin"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/mobilenumber"
                      android:singleLine="true"
                      android:inputType="textEmailAddress"
                      android:hint="@string/email_hint"
                      tools:ignore="Autofill"
                      app:layout_constraintRight_toRightOf="parent"
            />

            <EditText android:id="@+id/choosepwd"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/create_account_margin"
                      android:layout_marginRight="@dimen/create_account_margin"
                      android:layout_marginTop="@dimen/create_account_margin"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/email"
                      android:singleLine="true"
                      android:inputType="text"
                      android:hint="@string/choose_password_hint"
                      tools:ignore="Autofill"
                      app:layout_constraintRight_toRightOf="parent"
            />

            <TextView
                    android:id="@+id/termscondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/terms_text"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintRight_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/choosepwd"/>

            <Button android:id="@+id/loginbtn"
                    android:layout_width="@dimen/login_btn_width"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="@dimen/create_account_margin"
                    android:layout_marginLeft="@dimen/create_account_margin"
                    android:layout_marginRight="@dimen/create_account_margin"
                    app:layout_constraintTop_toBottomOf="@+id/termscondition"
                    android:text="@string/signup_button_text"
                    android:background="@drawable/loginbutton_shape"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/activity_button_size"
                    android:layout_marginBottom="@dimen/scroll_view_margin_bottom"
                    android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>