<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
>
    <data>
        <variable
                name="logincallback"
                type="com.familyroots.customer.views.callbacks.LoginActivityCallback"
        />
   </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
    >

        <EditText
                android:id="@+id/mobileoremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_margin_top"
                android:singleLine="true"
                android:hint="@string/login_hint"
                android:layout_marginLeft="@dimen/splash_logo_margin"
                android:layout_marginRight="@dimen/splash_logo_margin"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/password"
                tools:ignore="Autofill"
        />

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/splash_logo_margin"
                android:layout_marginLeft="@dimen/splash_logo_margin"
                android:layout_marginRight="@dimen/splash_logo_margin"
                app:layout_constraintTop_toBottomOf="@+id/mobileoremail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:hint="@string/password_hint"
                app:layout_constraintBottom_toTopOf="@+id/loginbtn"
                android:inputType="textPassword"
                tools:ignore="Autofill"
                />
        <Button android:id="@+id/loginbtn"
                android:layout_width="@dimen/login_btn_width"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/splash_logo_margin"
                android:layout_marginLeft="@dimen/splash_logo_margin"
                android:layout_marginRight="@dimen/splash_logo_margin"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:text="@string/login_label"
                android:background="@drawable/loginbutton_shape"
                app:layout_constraintBottom_toTopOf="@+id/forgotpassword"
                android:textColor="@color/white"
                android:onClick="@{() -> logincallback.onLoginClick()}"
                android:textSize="@dimen/activity_button_size"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:text="@string/forgot_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginbtn"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_margin="@dimen/splash_logo_margin"
                android:onClick="@{() -> logincallback.onForgotPasswordClick()}"
                android:layout_height="wrap_content"/>


        <Button android:id="@+id/createaccount"
                android:layout_width="@dimen/login_btn_width"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="@dimen/splash_logo_margin"
                app:layout_constraintTop_toTopOf="@+id/password"
                android:background="@drawable/loginbutton_shape"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_button_size"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{() -> logincallback.onCreateAccountClick()}"
                android:layout_height="wrap_content"/>

   </androidx.constraintlayout.widget.ConstraintLayout>

</layout>